--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -28,13 +28,13 @@
                 "category": "website",
                 "date": "2019-09-01",
                 "course": "ETEC 510",
-                "goals": ["1", "3", "4"],
+                "goals": ["3", "4"],
                 "group": "",
                 "type": "website",
-                "description": "This wordpress blog was designed as an introduction to fitbits for new users. It was an opportunity to develop content for particular users (i.e. new fitbit owners). This was one of my first uses of Wordpress.",
-                "connections": "While only a few years ago, this artifact shows just how quickly technology can change. I created this artifact to showcase a new (to me) wearable device. This artifact is included because it shows growth, but it also shows a challenge with web content - it can become outdated quickly! Not only is the content out of date (there are newer fitbits, and more advanced wearable tech), but the site itself is out of date. There are missing gifs, for example.",
-                "goals_text": "<li><a href='https://blogs.ubc.ca/alisonmyers/2019/01/22/day-2-so-you-still-have-a-fitbit/' target='blank'>FitBit Instructions Example</a></li>",
-                "reflection": "Feedback I received after creating this artifact included considering the limitations of a static website for the development of community. While I agree this is the case, I disagree that there is a need for all technologies to do all things. Community engagement is important, but did not fit with the intention of my <span class='tag-text'>design</span>.",
+                "description": "<p>This blog was designed as an introduction to fitbits for new users. It includes an introduction to the device, instructions on use and terminology, and a diagram of all possible navigation interactions. It was an opportunity to develop content for particular users (i.e. new fitbit owners) and consider how multimedia could be used to best engage that audience.</p>",
+                "reflection": "<p>Feedback I received after creating this artifact included considering the limitations of a static website for the development of community. While I agree this is the case, I disagree that there is a need for all technologies to do all things. Community engagement is important, but did not fit with the intention of my <span class='tag-text'>design</span>.</p>",
+                "connections": "<p>While only a few years ago, this artifact shows just how quickly technology can change. I created this artifact to showcase a new (to me) wearable device. This artifact is included because it shows growth, but it also shows a challenge with web content - it can become outdated quickly! Not only is the content out of date (there are newer fitbits, and more advanced wearable tech), but the site itself is out of date. There are missing gifs, for example (see Broken Gif Links below).</p>",
+                "goals_text": "<li><a href='https://blogs.ubc.ca/alisonmyers/2019/01/21/using-a-fitbit/' target='blank'>Broken Gif Links</a></li>",
                 "image": "../images/ETEC510-2b.png",
                 "links": ["https://blogs.ubc.ca/alisonmyers/category/fitbit/"], 
                 "iframe": "",
@@ -51,10 +51,10 @@
                 "goals": ["1"],
                 "type": "image",
                 "group": "",
-                "description": "This concept map was developed to demonstrate understanding of the history and context of important learning theories. It highlights key figures and connections between these theories.",
-                "connections": "This artifact introduced me to a tool that I have integrated into my learning and sharing of knowledge - concept maps and diagrams. his was one of (many) concept maps I developed throughout the MET program. Diagrams have become a more regular tool both personally and professionally.",
+                "description": "<p>This concept map was developed to demonstrate understanding of the history and context of important learning theories. It highlights key figures and connections between these theories.</p>",
+                "connections": "<p>This artifact introduced me to a tool that I have integrated into my learning and sharing of knowledge - concept maps and diagrams. his was one of (many) concept maps I developed throughout the MET program. Diagrams have become a more regular tool both personally and professionally.</p>",
                 "goals_text": "",
-                "reflection": "Learning the language of educators was an important reason for my interest in the MET program. In order to make connections between technology, students, and instructors it is important to understand context of the three which includes <span class='tag-text'>theory</span>. One struggle that I have with learning theories is shared terminology but different interpretations of the language when moving between philosophy, psychology, and education.",
+                "reflection": "<p>Learning the language of educators was an important reason for my interest in the MET program. In order to make connections between technology, students, and instructors it is important to understand context of the three which includes <span class='tag-text'>theory</span>. One struggle that I have with learning theories is shared terminology but different interpretations of the language when moving between philosophy, psychology, and education.</p>",
                 "image": "../images/ETEC512-1.png",
                 "links": ["https://lucid.app/documents/embeddedchart/5cbf4c24-0cac-4c11-acba-bb4c5a0baa9e"],
                 "iframe": "https://lucid.app/documents/embeddedchart/5cbf4c24-0cac-4c11-acba-bb4c5a0baa9e",
@@ -71,9 +71,9 @@
                 "type": "website",
                 "group": "Sieme Adhémar, Deisy Castillo, Jonathan Lapierre",
                 "description": "<p>This 'introductory course' was developed to introduce our peers to the neuroscience of learning. We had to consider the level of knowledge the audience would have, and develop materials that would be engaging to that audience. Further, we considered My background is in psychology, so the development of the content and the course itself was also an opportunity to review some of these concepts myself, but to think about them from the perspective of course design, or in relation to other learning theories.</p>",
-                "connections": "<p>We used Rise as our platform for developing our course. It truly was pleasure to <span class='tag-text'>design</span> and build because the platform itself was quite intuitive, dealt with the 'look and feel', and offered customization that we thought was important.</p>",
+                "connections": "<p>We used Rise as our platform for developing our course. It truly was pleasure to <span class='tag-text'>design</span> and build because the platform itself was quite intuitive, dealt with the look and feel, and offered customization that we thought was important. <GatsbyImage image={getImage(image)}/></p>",
                 "goals_text": "",
-                "reflection": "<p>Course discussion often centered around what level of expertise in the many areas of learning were required by educators. 'Do educators need to be experts in neuroscience?', for example. The general concensus was that expertise is not required, but the ability to evaluate information is. We included 'neuromyths' throughout our neuroscience course. Neuromyths are commonly held beliefs about how the brain works, even when there is no scientific evidence to support these beliefs. Or worse, when there is scientific evidence to the opposite of the myth. The challenge for educators is that neuromyths are pervasive online - from personal blogs, to educational vendor solutions. While it is not necessary for educators to be experts in neuroscience, they need to have the skills to identify neuromyths when they see them. ETEC 500 was an important course for the develpoment of these types of skills.</p>",
+                "reflection": "<p>Course discussion often centered around what level of expertise in the many areas of learning were required by educators. 'Do educators need to be experts in neuroscience?', for example. The general concensus was that expertise is not required, but the ability to evaluate information is. We included 'neuromyths' throughout our neuroscience course. Neuromyths are commonly held beliefs about how the brain works, even when there is no scientific evidence to support these beliefs. Or worse, when there is scientific evidence to the opposite of the myth. The challenge for educators is that neuromyths are pervasive online - from personal blogs, to educational vendor solutions. While it is not necessary for educators to be experts in neuroscience, they need to have the skills to identify neuromyths when they see them.</p>",
                 "image": "../images/ETEC512-2.png",
                 "links": ["https://rise.articulate.com/share/kAPXNTL2603967LvhLp7PRUNXFe7UJm3#/"],
                 "iframe": "",
@@ -166,13 +166,13 @@
             "category": "colour",
             "date": "2021-08-20",
             "course": "ETEC 580",
-            "goals": ["3"],
+            "goals": ["1", "3"],
             "group": "",
             "type": "website",
-            "description": "This project had two components: a final dashboard (seen here), and a github repo (linked). The github repo contains code that was developed to download, clean, and transform the data that ultimately ended up in the dashboard. The goal of this project was to build a tool that was useful to instructors who use Canvas, who are interested in Learning Analytics but may not have the infrastructure at their university to make the most out of Canvas Analytics.",
+            "description": "This project had two components: a final dashboard (images can be seen below), and a github repo. The github repo contains code that was developed to download, clean, and transform the data that ultimately ended up in the dashboard. The goal of this project was to build a tool that was useful to instructors who use Canvas, who are interested in learning analytics but may not have an institutional solution.",
             "connections": "",
-            "goals_text": "",
             "reflection": "",
+            "goals_text": "<li><a href='https://github.com/saud-learning-services/course-details' target='blank'>Open Source GitHub Project</a></li>",
             "image": "../images/ETEC580-1b.png",
             "links": ["https://github.com/saud-learning-services/course-details"],
             "iframe": "https://docs.google.com/presentation/d/e/2PACX-1vSI7VOiciqfJl4WDxP7WNzx7oW4X2bs51eq8b-nQ1HcbRTQnZICqd_UHLl-S-sH2hTWmu0cONGPapPQ/embed?start=false&loop=false&delayms=3000"
