--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -32,7 +32,7 @@
                 "group": "",
                 "type": "website",
                 "description": "<p>This blog was designed as an introduction to fitbits for new users. It includes an introduction to the device, instructions on use and terminology, and a diagram of all possible navigation interactions. It was an opportunity to develop content for particular users (i.e. new fitbit owners) and consider how multimedia could be used to best engage that audience.</p>",
-                "connections": "<p>Feedback I received after creating this artifact included considering the limitations of a static website for the development of community. While I agree this is the case, I disagree that there is a need for all technologies to do all things. Community engagement is important, but did not fit with the intention of my <span class='tag-text'>design</span>.</p>",
+                "connections": "<p>Feedback I received after creating this project included considering the limitations of a static website for the development of community. While I agree this is the case, I disagree that there is a need for all technologies to do all things. Community engagement is important, but did not fit with the intention of my <span class='tag-text'>design</span>.</p>",
                 "reflection": "<p>While only a few years ago, this artifact shows just how quickly technology can change. I created this artifact to showcase a new (to me) wearable device. This artifact is included because it shows growth, but it also shows a challenge with web content - it can become outdated quickly! Not only is the content out of date (there are newer fitbits, and more advanced wearable tech), but the site itself is out of date. There are missing gifs, for example (see Broken Gif Links below).</p>",
                 "goals_text": "<li><a href='https://blogs.ubc.ca/alisonmyers/2019/01/21/using-a-fitbit/' target='blank'>Broken Gif Links</a></li>",
                 "image": "../images/ETEC510-2b.png",
@@ -209,7 +209,7 @@
             "goals": ["4"],
             "group": "",
             "type": "website",
-            "description": "Throughout the MET program, I have most enjoyed being able to build tools. This ePortfolio is no exception, and the biggest challenge. This ePortfolio dynamically creates its content, including what you are reading now.",
+            "description": "Throughout the MET program, I have most enjoyed being able to build tools. This portfolio is no exception, and the biggest challenge. This portfolio dynamically creates its content, including what you are reading now.",
             "connections": "I have built two Wordpress blogs, one Moodle course with a custom companion website, and a Rise (Articulate) course. The development of the content for these websites made me curious about the “behind the scenes“. There were some components of those websites that I have tried to build here (for example, this window), but for the most part I was trying to build componenets that I thought would work to expand my idea of what an ePortfolio could be.",
             "goals_text": "how does this relate to my goals",
             "reflection": "I had hoped to do more writing and research throughout my courses - as this is not something I normally have much time for in my day-to-day. However, when the option was available to create something, that was the path I generally took.",
