--- a/src/data/MyProjects.json
+++ b/src/data/MyProjects.json
@@ -8,16 +8,16 @@
                 "category": "sketch",
                 "date": "2019-09-01",
                 "course": "ETEC 510",
-                "goals": ["1"],
+                "goals": ["3", "1"],
                 "type": "website",
                 "group": "Brogan Pratt, Miguel Strother, Jamie Tooze, Raisa Vecina",
                 "description": "<p>We developed a Reddit community for educators interested in virtual reality (VR) production. We suggested post types, flairs (like tags), and the opportunity to review work or provide feedback to members of the community. These suggestions were meant to provide initial opportunities for engagement in order to promote <span class='tag-lang'>digital citizenship</span>, but our hope was that the community would evolve its own practices over time.</p> <p>As part of the development, we each created some of our own VR prototypes. I used a tool called edu.cospaces to program my first VR game.</p>",
                 "connections": "<p>Two themes originated in <span class='tag-course'>ETEC 510</span> that have made an impact: digital citizenship or community “outside of the classroom“, and “tinkering“ or <span class='tag-lang'>geeking out</span>. We chose Reddit as our platform for engaging with others because it is a popular, open, discussion platform. Developing, and engaging with communities of educators can be incredibly valuable, especially when exploring new or up-and-coming technology.</p>",
-                "goals_text": "<li><a href='https://edu.cospaces.io/GLQ-BMB' target='blank'>Main Artifact (linked in 'card' view): My VR Game</a></li><li><a href='https://www.reddit.com/r/VReducationProduction' target='blank'>The VR Reddit Community Site</a></li>",
+                "goals_text": "<li><a href='https://www.reddit.com/r/VReducationProduction' target='blank'>The VR Reddit Community Site</a></li><li><a href='https://docs.google.com/document/d/e/2PACX-1vTpjA-cra11JXIx8lHMn10beFt-2QfDRmKDGLlzBME5Ksz7Lf1nTYiZ2_7JOKO8aQ/pub?embedded=true' target='blank'>Curriculum Companion to Reddit Community</a></li>",
                 "reflection": "<p>Considering <span class='tag-lang'>time</span> in a digital space has been an important learning experience. Time can make content irrelevant or outdated (i.e. <em>How To FitBit</em>). It can also change the access that one might have to conent, for example in a course (i.e. <em>A Course Companion Website</em>). In the development of this portfolio I deeply considered how to make sure that my portfolio did not become a relic in time.</p>",
                 "image": "../images/ETEC510-1b.png",
                 "links": ["https://edu.cospaces.io/GLQ-BMB"],
-                "iframe": "https://docs.google.com/document/d/e/2PACX-1vTpjA-cra11JXIx8lHMn10beFt-2QfDRmKDGLlzBME5Ksz7Lf1nTYiZ2_7JOKO8aQ/pub?embedded=true",
+                "iframe": "https://edu.cospaces.io/GLQ-BMB",
                 "tags": ["tinkering", "geekingout", "digitalcitizenship", "design"]
     
             }, 
@@ -34,7 +34,7 @@
                 "description": "<p>This blog was designed as an introduction to fitbits for new users. It includes an introduction to the device, instructions on use and terminology, and a diagram of all possible navigation interactions. It was an opportunity to develop content for particular users (i.e. new fitbit owners) and consider how multimedia could be used to best engage that audience.</p>",
                 "connections": "<p>Feedback I received after creating this project included considering the limitations of a static website for the development of community. While I agree this is the case, I disagree that there is a need for all technologies to do all things. Community engagement is important, but did not fit with the intention of my <span class='tag-lang'>design</span>.</p>",
                 "reflection": "<p>While only a few years ago, this artifact shows just how quickly technology can change. I created this artifact to showcase a new (to me) wearable device. This artifact is included because it shows growth, but it also shows a challenge with web content - it can become outdated quickly! Not only is the content out of date (there are newer fitbits, and more advanced wearable tech), but the site itself is out of date. There are missing gifs, for example (see Broken Gif Links below).</p>",
-                "goals_text": "<li><a href='https://blogs.ubc.ca/alisonmyers/2019/01/21/using-a-fitbit/' target='blank'>Broken Gif Links</a></li>",
+                "goals_text": "<li><a href='https://blogs.ubc.ca/alisonmyers/category/fitbit/' target='blank'>Main: Using a FitBit Blog</a></li><li><a href='https://blogs.ubc.ca/alisonmyers/2019/01/21/using-a-fitbit/' target='blank'>Broken Gif Links</a></li>",
                 "image": "../images/ETEC510-2b.png",
                 "links": ["https://blogs.ubc.ca/alisonmyers/category/fitbit/"], 
                 "iframe": "",
@@ -125,10 +125,10 @@
             "category": "outline",
             "date": "2019-09-01",
             "course": "ETEC 524",
-            "goals": ["1", "4"],
+            "goals": ["1","3", "4"],
             "group": "",
             "type": "website",
-            "description": "In ETEC 524 we developed the structure of a course, as well as the structure of a module of that course. I used Moodle as my course shell, but determined it was important to have content that “lived on“ past the end of a course. So, I developed the majority of my content in this course companion website.",
+            "description": "In <span class='tag-course'>ETEC 524</span> we developed the structure of a course, as well as the structure of a module of that course. I used Moodle as my course shell, but determined it was important to have content that “lived on“ past the end of a course. So, I developed the majority of my content in this course companion website.",
             "connections": "<span class='tag-lang'>UDL</span>",
             "goals_text": "how does this relate to my goals",
             "reflection": "reflection on project",
@@ -145,7 +145,7 @@
             "category": "outline",
             "date": "2021-06-02",
             "course": "ETEC 524",
-            "goals": ["1", "4"],
+            "goals": ["2", "1", "4"],
             "group": "Sean Gallagher, Erica Hill, Noelle Peach, Lyon Tsang, John Wu",
             "type": "paper",
             "description": "<p>This rubric was developed to support an institution's evaluation and selection of a learning management system (LMS). In addition to the development of the rubric, we also used the evaluation criteria to investigate whether a large institution should consider adopting a new LMS or keeping their current in light of changes introduced during the covid-19 pandemic.</p>",
@@ -172,7 +172,7 @@
             "group": "",
             "type": "dashboard",
             "description": "<p>This project was developed using a sample data source ...</p>",
-            "connections": "<p>This was one of two Tableau projects developed over the course of my MET experience. The prototype was an important stepping stone for the development of a dashboard template for my self-directed ETEC 590 project.</p>",
+            "connections": "<p>This was one of two Tableau projects developed over the course of my MET experience. The prototype was an important stepping stone for the development of a dashboard template for my self-directed <span class='tag-course'>ETEC 590</span> project.</p>",
             "goals_text": "",
             "reflection": "<p>Learning Analytics can be used to inform instructors about their student experience in online environments, and provide information about the courses they have developed and taught. However, many learning analytics systems miss instructor intent in the provided data. This dashboard was designed to demonstrate the value of including learning design in a learning analytics dashboard",
             "image": "../images/ETEC543-1.png",
@@ -193,10 +193,11 @@
             "description": "<p>This project had two components: a final dashboard (images can be seen below), and a github repo. The github repo contains code that was developed to download, clean, and transform the data that ultimately ended up in the dashboard. The goal of this project was to build a tool that was useful to instructors who use Canvas, who are interested in learning analytics but may not have an institutional solution.</p>",
             "connections": "",
             "reflection": "",
-            "goals_text": "<li><a href='https://github.com/saud-learning-services/course-details' target='blank'>Open Source GitHub Project</a></li>",
+            "goals_text": "<li><a href='https://github.com/saud-learning-services/course-details' target='blank'><Main: Open Source GitHub Project</a></li>",
             "image": "../images/ETEC580-1b.png",
             "links": ["https://github.com/saud-learning-services/course-details"],
-            "iframe": "https://docs.google.com/presentation/d/e/2PACX-1vSI7VOiciqfJl4WDxP7WNzx7oW4X2bs51eq8b-nQ1HcbRTQnZICqd_UHLl-S-sH2hTWmu0cONGPapPQ/embed?start=false&loop=false&delayms=3000"
+            "iframe": "https://docs.google.com/presentation/d/e/2PACX-1vSI7VOiciqfJl4WDxP7WNzx7oW4X2bs51eq8b-nQ1HcbRTQnZICqd_UHLl-S-sH2hTWmu0cONGPapPQ/embed?start=false&loop=false&delayms=3000",
+            "tags": ["DIY", "design"]
 
         },
       
