--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "^17.0.1",
     "react-slick": "^0.28.1",
     "react-vertical-timeline-component": "^3.5.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
