--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-remark-responsive-iframe": "^5.1.0",
     "gatsby-source-filesystem": "^4.1.0",
+    "gatsby-source-google-sheets": "^1.1.1",
     "gatsby-transformer-json": "^4.1.0",
     "gatsby-transformer-sharp": "^4.2.0",
     "google-spreadsheet": "^3.2.0",
