--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@react-icons/all-files": "^4.1.0",
+    "babel-runtime": "^6.26.0",
     "bootstrap": "^5.1.3",
     "gatsby": "^4.7.2",
     "gatsby-image": "^3.11.0",
