--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "rm -rf .cache/caches/gatsby-plugin-mdx && gatsby clean"
   },
   "dependencies": {
+    "@cezarcarvalhaes/gatsby-source-google-sheets": "^2.0.1",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@react-icons/all-files": "^4.1.0",
