--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio",
   "version": "1.0.0",
   "private": true,
-  "description": "My Portfolio",
+  "description": "My Resource Management Tool",
   "author": "alisonmyers",
   "keywords": [
     "gatsby"
