--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-remark-responsive-iframe": "^5.1.0",
     "gatsby-source-filesystem": "^4.1.0",
+    "gatsby-source-google-sheets": "^1.1.1",
     "gatsby-source-google-spreadsheets": "^3.0.8",
     "gatsby-transformer-json": "^4.1.0",
     "gatsby-transformer-sharp": "^4.2.0",
