--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.1",
     "react-slick": "^0.28.1",
+    "react-switch": "^6.0.0",
     "react-vertical-timeline-component": "^3.5.2",
     "slick-carousel": "^1.8.1"
   },
