--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.1",
+    "react-select": "^5.2.2",
     "react-slick": "^0.28.1",
     "react-switch": "^6.0.0",
     "react-vertical-timeline-component": "^3.5.2",
