--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/react": "^1.6.22",
     "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^5.1.3",
+    "ckeditor4-react": "^3.0.0",
     "gatsby": "^4.7.2",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^2.1.0",
